# CameraV2

./: .clang-format  .gitignore  CMakeLists.txt  README.md
camera/: Cargo.toml  build.rs
camera/src/: buffer_pool.rs  camera_bindings.rs  client_store.rs  compression.rs  main.rs  server.rs  thread_pool.rs
core/: c_bindings.cpp  camera.cpp  main.cpp
core/include/: c_bindings.hpp  camera.hpp  pipeline.hpp
src/: c_bindings.cpp  camera.cpp  main.cpp
src/include/: c_bindings.hpp  camera.hpp  completed_request.hpp  pipeline.hpp
