[package]
name = "camera"
version = "0.1.0"
edition = "2021"
build="build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
tokio = {version = "1.32.0", features= ["macros", "net", "rt"]}
rsct = { git = "https://github.com/RubenSystems/rsct", version = "0.1.0" }
lazy_static = "1.4.0"
core_affinity = "0.8.1"
turbojpeg-sys = "0.2.3"
